# paratex

./: .gitignore  CDC.md  CHANGELOG.md  ESCOPO.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  esclarecimento.md  incremento-feature.md  incremento-funcionalidade.md
.github/workflows/: python-test.yml
notebooks/: Selenium test.ipynb  making_data_structures.ipynb  navigate_outside.ipynb
paratex/: __init__.py  __main__.py  atum.py  date_utils.py  extractor.py  get_attendance.py  get_sessions_on_page.py  join_parts.py
scraper/: main.py
tests/: test_date_utils.py  test_extractor.py
