[tool.poetry]
name = "paratex"
version = "0.0.6"
description = "Parliamentary Attendance Extractor."
authors = ["João Paulo Taylor Ienczak Zanette <jpaulotiz@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
pandas = "^0.25.1"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
