[tool.poetry]
name = "paratex"
version = "0.2.0"
description = "Parliamentary Attendance Extractor."
authors = ["João Paulo Taylor Ienczak Zanette <jpaulotiz@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
requests = "^2.22"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pytest = "^5.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
